2004-06-22 Tanya Wolff
	Fix for Bug 49883:  duplicate mnemonics on editor preferences page.
	Also flipped label/checkbox presentation for "bold" so the mnemonic would work. 
	Removed unneeded keys.
	
	* src/org/eclipse/cdt/internal/ui/preferences/CEditorPreferencePage.java
	* src/org/eclipse/cdt/internal/ui/preferences/PreferencesMessages.properties
		

2004-06-22 Bogdan Gheorghe
	Fix for 68028: Open Declaration into closed project causes PartInitException
	
	* src/org/eclipse/cdt/internal/ui/util/EditorUtility.java
	* src/org/eclipse/cdt/internal/ui/util/OpenIncludeAction.java
	
 
2004-06-21 Bogdan Gheorghe
	Fixed opening search external markers.

2004-06-21 Alain Magloire

	Big Patch from Vladimir Hirsl
	Implementation of AIX XCOFF32 binary parser page.

	* src/org/eclipse/cdt/ui/dialogs/GNUElfBinaryParserPage.java
	* src/org/eclipse/cdt/ui/dialogs/GNUXCoffBinaryParserPage.java

2004-06-21 Hoda Amer
	Fix for PR 63439 : [Content Assist] When prefix is a C/C++ keyword, Content Assist does not complete templates
	
2004-0618 Alain Magloire
	Patch from Chris W. to fix PR 6606

2004-06-17 Tanya Wolff
	Fix for PR 60616: [Accessibility] 
	Removed mnemonics for reusable code Browse & Variables buttons, 
	fixed other duplicate mnemonices in New Class wizard.
	*org.eclipse.cdt.ui.wizards/NewWizardMessages.properties
	
2004-06-18 Bogdan Gheorghe
	Fix for Bug 66933: [Selection Search] Working set name is {0} in search results
	
	* src/org/eclipse/cdt/internal/ui/search/actions/FindDeclarationsInWorkingSetAction.java
	* src/org/eclipse/cdt/internal/ui/search/actions/FindRefsInWorkingSetAction.java
	
2004-06-18 Bogdan Gheorghe
	Part 2 of Fix for Bug 62668: [Search] Search results rely on case of file names in include statement
	rather then the filesystem
	
	* src/org/eclipse/cdt/internal/ui/search/CSearchResultPage.java
	
2004-06-18 Bogdan Gheorghe
	Partial Fix for Bug 62668: [Search] Search results rely on case of file names in include statement
	rather then the filesystem
	